# blWidgets

./: .gitignore  CMakeLists.txt  README.md  blwidgets_prompts-2.md
app/: main.cpp
core/: bl_app.cpp  bl_app.h
platform/: bl_window.cpp  bl_window.h
rendering/: bl_render_context.cpp  bl_render_context.h
ui/: bl_animation.h  bl_box_sizer.cpp  bl_box_sizer.h  bl_button.cpp  bl_button.h  bl_checkbox.cpp  bl_checkbox.h  bl_color_animation.cpp  bl_color_animation.h  bl_dropdown.cpp  bl_dropdown.h  bl_event.h  bl_event_dispatcher.cpp  bl_event_dispatcher.h  bl_label.cpp  bl_label.h  bl_panel.cpp  bl_panel.h  bl_progress_bar.cpp  bl_progress_bar.h  bl_radio_button.cpp  bl_radio_button.h  bl_scroll_container.cpp  bl_scroll_container.h  bl_sizer.h  bl_slider.cpp  bl_slider.h  bl_style.h  bl_stylesheet.cpp  bl_stylesheet.h  bl_textfield.cpp  bl_textfield.h  bl_ui_root.cpp  bl_ui_root.h  bl_widget.h
